18: Long recent searches list no longer pushes down search bar. Footer remains in place at the bottom of the screen unless there is content that would overlap it exists, in which case it moves down.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -33,12 +33,19 @@
 }
 
 body {
+    display: flex;
+    flex-direction: column;
     font-family: 'Lobster', cursive;
     font-size: 26px;
     line-height: 1.8;
+    height: 100vh;
     color: var(--primary);
     background-color: var(--secondary);
     background-image: var(--gradient);
+}
+
+footer {
+    margin-top: auto;
 }
 
 h1, h2, h3 {
@@ -136,10 +143,6 @@ section {
     font-size: 26px;
     font-family: 'Courgette', cursive;
     color: var(--primary);
-}
-
-.searchedCocktail {
-    height: 40vw;
 }
 
 .history {
